<resources>
    <string name="app_name">Rephoto</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="camera_button">&#xf030; Snap Picture</string>
    <string name="frame">frame</string>
    <string name="re_fotografie">Re-fotografie</string>
    <string name="spustit_aplikaci">Spustit aplikaci</string>
    <string name="ukon_it">Ukončit</string>
    <string name="spustit">Spustit</string>
    <string name="ukoncit">Ukončit</string>
    <string name="end">Ukončit</string>
    <string name="play">Spustit</string>
    <string name="enter_optical_center">Zadejte optický střed</string>
    <string name="enter_focal_lenght">Zadejte ohniskovou vzdálenost</string>
    <string name="calibration_camera">Kalibrace kamery</string>
    <string name="insert_calibration_data">Vložit</string>
    <string name="error_message">Zadejte číselnou hodnotu</string>
    <string name="select_correct_points">Označte odpovídající body</string>
    <string name="ref_frame">ref_frame</string>
    <string name="change_view">Změnit fotografii</string>
    <string name="selected_all">Označeno vše</string>
    <string name="exit">Exit</string>
    <string name="zadejte_kalibra_n_parametry_pro_fotoapar_t">Zadejte kalibrační parametry pro fotoaparát</string>
    <string name="zadejte_kalibracni_parametry_pro_kameru">Zadejte kalibracni parametry pro kameru</string>
    <string name="cx">cx</string>
    <string name="cy">cy</string>
    <string name="fx">fx</string>
    <string name="fy">fy</string>
    <string name="calibration">Kalibrace</string>
    <string name="zadejte_refere_n_sn_mek">Zadejte refereční snímek</string>
    <string name="vyber">Vyber</string>
    <string name="value_fy">548</string>
    <string name="value_fx">585</string>
    <string name="value_cy">273</string>
    <string name="value_cx">339</string>
    <string name="empty">0</string>
    <string name="checkbox">CheckBox</string>
    <string name="tf_path_to_second_frame">Zadejte adresu druheho snímku</string>
    <string name="zadejte_adresu_prvn_ho_sn_mku">tf_path_to_first_frame</string>
    <string name="ok">OK</string>
    <string name="continues">Pokračovat</string>
    <string name="tf_path_to_first_frame">Zadejte adresu prvního snímku</string>
    <string name="enablePath">Přejete si zadat fotografie ze souboru</string>
    <string name="_341">341</string>
    <string name="_172">172</string>
    <string name="_2040">2040</string>
    <string name="_1548">1548</string>
    <string name="nextPoint">Další bod</string>

    <!--to toggle the open close button
        of the navigation drawer-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="title_activity_test_navigation">testNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="header_title">Not logged</string>
    <string name="header_text">Not Logged</string>
    <string name="username">email</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="log_in">Log in</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="choose_photo">Choose photo</string>
    <string name="settings">Settings</string>
    <string name="access_token">access_token</string>
    <string name="first_name">first_name</string>
    <string name="last_name">last_name</string>
    <string name="logged">logged</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="smart_navigation_enabled">smart_navigation_enabled</string>
    <string name="toggleSmartNavigation">Smart Navigation</string>
</resources>
