<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.vyw.rephotoandroid.SimpleMainActivity">

    <item
        android:id="@+id/choose_photo"
        android:icon="@drawable/baseline_folder_open_black_24dp"
        android:onClick="choosePhoto"
        android:title="@string/choose_photo" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/baseline_settings_black_24dp"
        android:onClick="openSettings"
        android:title="@string/settings" />

    <item
        android:id="@+id/login"
        android:icon="@drawable/baseline_login_black_24dp"
        android:onClick="Login"
        android:title="@string/login" />


    <item
        android:id="@+id/logout"
        android:icon="@drawable/baseline_logout_black_24dp"
        android:onClick="Logout"
        android:title="@string/logout"
        android:visible="false" />

    <!--    <item-->
    <!--        android:id="@+id/local_chooser"-->
    <!--        android:onClick="simpleNavigation"-->
    <!--        android:title="Choose reference photo" />-->
</menu>