<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:text="@string/re_fotografie"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_play"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="playApplication"
            android:text="@string/play" />

        <Button
            android:id="@+id/button_play2"
            android:layout_width="202dp"
            android:layout_height="60dp"
            android:onClick="startCpp"
            android:text="Start C++" />

        <Button
            android:id="@+id/button_play3"
            android:layout_width="202dp"
            android:layout_height="60dp"
            android:onClick="startSimple"
            android:text="Simple Navigation" />


        <Button
            android:id="@+id/simple_navigation"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="choosePhoto"
            android:text="Simple Navigation" />

        <Button
            android:id="@+id/button_end"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:onClick="endApplication"
            android:text="@string/end" />

    </LinearLayout>


</RelativeLayout>
